--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "google-auth-library": "^10.2.1",
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.5",
+    "zod": "^4.0.17"
   }
 }
