--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "google-auth-library": "^10.2.1",
+    "gsap": "^3.13.0",
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "zod": "^4.0.17"
