--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,8 @@
     "strict": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
-  }
+    "resolveJsonModule": true,
+    "types": ["node", "jest"]
+  },
+  "exclude": ["src"]
 }
